--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
                         <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                             <div class="card-body">
                                 <fieldset class="fieldset">
-                                    <label class="label">Select Bank</label>
+                                    <label class="">Select Bank</label>
                                     <select class="select">
 
                                         <option disabled selected>Select Bank</option>
@@ -93,14 +93,14 @@
                                         <option value="Rocket">Rocket</option>
                                         <option value="Upay">Upay</option>
                                     </select>
-                                    <label class="">Mobile Number</label>
-                            <input id="account-number"  type="number" class="input" placeholder="Enter your number" required/>
+                                    <label class="">Bank Account Number</label>
+                            <input id="account-number"  type="number" class="input" placeholder="Enter 11 digit account number" required/>
                             <label class="">Amount to Add</label>
                             <input id="account-number"  type="number" class="input" placeholder="Add Amount to Withdraw" required/>
-                            <label class="">4 Digit Pin</label>
+                            <label class="">Pin Number</label>
                             <input id="pin-number"type="text" class="input" placeholder="Enter 4 Digit pin (1234)" required/>
                             <!-- <div><a class="link link-hover">Forgot password?</a></div> -->
-                            <button id="login-btn" class="btn btn-neutral rounded-full mt-4 bg-blue-600 border-0">Login</button>
+                            <button id="login-btn" class="btn btn-neutral rounded-full mt-4 bg-blue-600 border-0">Add Money</button>
                                 </fieldset>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
 
 
 
-            <footer class=" bg-blue-500 footer sm:footer-horizontal text-neutral-content items-center p-4">
+            <!-- <footer class=" bg-blue-500 footer sm:footer-horizontal text-neutral-content items-center p-4">
   <aside class="grid-flow-col items-center">
     <p class="text-black">Copyright © Abdey Rabby</p>
   </aside>
@@ -188,7 +188,7 @@
       </svg>
     </a>
   </nav>
-</footer>      
+</footer>       -->
         </section>
 
 
