add money function added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <label class="">4 Digit Pin</label>
                             <input id="pin-number"type="text" class="input" placeholder="Enter 4 Digit pin (1234)" required/>
                             <div><a class="link link-hover">Forgot password?</a></div>
-                            <button id="login-btn" class="btn btn-neutral mt-4 bg-blue-600 border-0">Login</button>
+                            <button id="login-btn" class="btn btn-neutral mt-4 bg-blue-600 border-0 rounded-full">Login</button>
                         </fieldset>
                     </form>
                 </div>
