--- a/main.html
+++ b/main.html
@@ -138,16 +138,16 @@
                             <form class="card-body">
                                 <fieldset class="fieldset">
                                     <label class="">Agent Number</label>
-                                    <input id="account-number" type="number" class="input"
+                                    <input id="agent-number" type="number" class="input"
                                         placeholder="Enter 11 digit Agent number" required/>
                                     <label class="">Amount</label>
-                                    <input id="add-ammount" type="number" class="input"
+                                    <input id="cash-amount" type="number" class="input"
                                         placeholder="Add Amount to withdraw" required/>
-                                    <label class="">Pin Number</label>
-                                    <input id="pin-number" type="text" class="input"
+                                    <label class="pin-number">Pin Number</label>
+                                    <input id="pin" type="text" class="input"
                                         placeholder="Enter 4 Digit pin (1234)" required/>
                                     <!-- <div><a class="link link-hover">Forgot password?</a></div> -->
-                                    <button id="add-money-btn"
+                                    <button id="withdraw-money-btn"
                                         class="btn btn-neutral rounded-full mt-4 bg-blue-600 border-0">Withdraw
                                         Money</button>
                                 </fieldset>
@@ -246,6 +246,7 @@
     </section>
 <script src="./script/toggle.js"></script>
 <script src="./script/addMoney.js"></script>
+<script src="./script/cashout.js"></script>
 </body>
 
 </html>
