--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
                         <img class="w-10 mx-auto" src="./assets/purse1.png" alt="">
                         <h3 class="text-center font-semibold ">Pay Bill</h3>
                     </div>
-                    <div id=""
+                    <div id="transaction-div"
                         class="border-gray-400 border-1 rounded-lg p-4 cursor-pointer hover:border-blue-600 hover:text-blue-600 hover:bg-blue-50">
                         <img class="w-10 mx-auto" src="./assets/transaction1.png" alt="">
                         <h3 class="text-center font-semibold ">Transactions</h3>
@@ -158,6 +158,18 @@
 
             </section>
 
+            <!-- Transaction section  -->
+            <section class="mx-3" id="transaction-section">
+                <h1 class="font-bold text-red-600">Transaction History</h1>
+                <div id="transaction-container">
+                <h1 id="" class="border-black border-2">
+
+                </h1>
+
+                </div>
+
+            </section>
+
 
 
 
@@ -244,9 +256,11 @@
 
 
     </section>
+<script src="./utilities/utilities.js"></script>
 <script src="./script/toggle.js"></script>
 <script src="./script/addMoney.js"></script>
 <script src="./script/cashout.js"></script>
+<script src="./script/transaction.js"></script>
 </body>
 
 </html>
