--- a/main.html
+++ b/main.html
@@ -98,7 +98,7 @@
                             <form class="card-body">
                                 <fieldset class="fieldset">
                                     <label class="">Select Bank</label>
-                                    <select class="select">
+                                    <select id="bank-list" class="select">
 
                                         <option disabled selected>Select Bank</option>
 
@@ -160,11 +160,10 @@
 
             <!-- Transaction section  -->
             <section class="mx-3" id="transaction-section">
-                <h1 class="font-bold text-red-600">Transaction History</h1>
+                <div class="mb-3">
+                    <h1 class="font-bold text-red-600">Transaction History</h1>
+                </div>
                 <div id="transaction-container">
-                <h1 id="" class="border-black border-2">
-
-                </h1>
 
                 </div>
 
